# mono-merger

./: .gitignore  .pylintrc  CODE_REVIEW.md  README.md  pyproject.toml  pytest.ini
mono_merger/: async_git.py  config.py  main.py  merge_repos.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_async_git.py  test_main.py  test_merge_repos.py
