[project]
name = "mono-merger"
version = "0.1.0"
description = "An application to merge multiple GitHub repositories into a single mono-repo."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles>=24.1.0",
    "gitpython>=3.1.45",
    "pyyaml>=6.0.2",
    "pybiztools",
]

[tool.uv.sources]
pybiztools = { git = "https://github.com/fcarliertrk/pybiztools.git" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
]
